<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_sms_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:layout_marginBottom="10dp"
            android:textColor="@color/files_item_line_2_text_color"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_sms_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_sms"
            android:layout_marginBottom="10dp"
            android:textColor="@color/files_item_line_2_text_color"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_sms_add_to_white_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_white_list"
            android:layout_marginBottom="10dp"
            android:textColor="@color/files_item_line_2_text_color"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_sms_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginBottom="10dp"
            android:textColor="@color/files_item_line_2_text_color"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
